--- a/ETL-start-mical.ipynb
+++ b/ETL-start-mical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
     "import random\n",
     "import json\n",
     "import requests\n",
-    "#from config import api_key\n",
+    "from config import api_key\n",
     "\n",
     "\n",
     "# Create a reference the CSV file desired\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "(1412, 24)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "[4 rows x 24 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1869,7 @@
        "YUB        2497        2777     1209.67     1294.42         643         685"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2591,7 +2591,7 @@
        "YUB        2497        2777     1209.67     1294.42         643         685"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2612,7 +2612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {
     "scrolled": true
    },
@@ -2662,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
        "(6544, ' VEHICLES LEAVE SF ON HWY 280 IN THE EVENING COMMUTE')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2683,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -2692,7 +2692,7 @@
        "(24.591050339214167, 'Average Speed in San Francisco')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2704,7 +2704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2713,7 @@
        "(16484, ' VEHICLES COME TO SF USING HWY 280 DURING MORNING COMMUTE')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2725,7 +2725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2735,7 +2735,7 @@
        " 'Inner City Travel Time (Minutes), getting from any one zone to another')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2747,7 +2747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2756,7 @@
        "('HIGHEST TRAFFIC ON ROUTE 280 IN THE EVENING IS ', 6544)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2768,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2778,7 +2778,7 @@
        " 207.63595528444813)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2790,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2800,7 +2800,7 @@
        " 8.553475209193607)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2812,7 +2812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2823,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "metadata": {
     "scrolled": true
    },
@@ -2873,7 +2873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 88,
    "metadata": {
     "scrolled": true
    },
@@ -2884,7 +2884,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2919,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2928,7 +2928,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2968,78 +2968,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save config informationfor open weather API\n",
-    "# url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "# city1 = \"San Francisco\"\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
+    "city1 = \"San Francisco\"\n",
     "\n",
     "# Build query URL\n",
-    "# query_url = url + \"appid=\" + api_key + \"&q=\" + city1"
+    "query_url = url + \"appid=\" + api_key + \"&q=\" + city1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weather API responded with: {'coord': {'lon': -76.88, 'lat': 1.17}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04d'}], 'base': 'stations', 'main': {'temp': 284.009, 'pressure': 1015.8, 'humidity': 89, 'temp_min': 284.009, 'temp_max': 284.009, 'sea_level': 1015.8, 'grnd_level': 757.21}, 'wind': {'speed': 1.04, 'deg': 173.994}, 'clouds': {'all': 100}, 'dt': 1565297205, 'sys': {'message': 0.0063, 'country': 'CO', 'sunrise': 1565262504, 'sunset': 1565306282}, 'timezone': -18000, 'id': 3669881, 'name': 'San Francisco', 'cod': 200}.\n"
+     ]
+    }
+   ],
    "source": [
     "# Get weather data for SF from OPEN WEATHER API\n",
-    "# weather_response = requests.get(query_url)\n",
-    "# weather_json = weather_response.json()\n",
+    "weather_response = requests.get(query_url)\n",
+    "weather_json = weather_response.json()\n",
     "\n",
     "# Get the temperature from the response\n",
-    "# print(f\"The weather API responded with: {weather_json}.\")"
+    "print(f\"The weather API responded with: {weather_json}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"base\": \"stations\",\n",
+      "    \"clouds\": {\n",
+      "        \"all\": 100\n",
+      "    },\n",
+      "    \"cod\": 200,\n",
+      "    \"coord\": {\n",
+      "        \"lat\": 1.17,\n",
+      "        \"lon\": -76.88\n",
+      "    },\n",
+      "    \"dt\": 1565297205,\n",
+      "    \"id\": 3669881,\n",
+      "    \"main\": {\n",
+      "        \"grnd_level\": 757.21,\n",
+      "        \"humidity\": 89,\n",
+      "        \"pressure\": 1015.8,\n",
+      "        \"sea_level\": 1015.8,\n",
+      "        \"temp\": 284.009,\n",
+      "        \"temp_max\": 284.009,\n",
+      "        \"temp_min\": 284.009\n",
+      "    },\n",
+      "    \"name\": \"San Francisco\",\n",
+      "    \"sys\": {\n",
+      "        \"country\": \"CO\",\n",
+      "        \"message\": 0.0063,\n",
+      "        \"sunrise\": 1565262504,\n",
+      "        \"sunset\": 1565306282\n",
+      "    },\n",
+      "    \"timezone\": -18000,\n",
+      "    \"weather\": [\n",
+      "        {\n",
+      "            \"description\": \"overcast clouds\",\n",
+      "            \"icon\": \"04d\",\n",
+      "            \"id\": 804,\n",
+      "            \"main\": \"Clouds\"\n",
+      "        }\n",
+      "    ],\n",
+      "    \"wind\": {\n",
+      "        \"deg\": 173.994,\n",
+      "        \"speed\": 1.04\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the output of the JSON\n",
-    "# print(json.dumps(weather_json, indent=4, sort_keys=True))"
+    "print(json.dumps(weather_json, indent=4, sort_keys=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save config information for LA   from OPEN WEATHER API\n",
-    "# url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "# city2 = \"Los Angeles\"\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
+    "city2 = \"Los Angeles\"\n",
     "\n",
-    "# Build query URL\n",
-    "# query_url = url + \"appid=\" + api_key + \"&q=\" + city2"
+    "#Build query URL\n",
+    "query_url = url + \"appid=\" + api_key + \"&q=\" + city2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weather API responded with: {'coord': {'lon': -118.24, 'lat': 34.05}, 'weather': [{'id': 721, 'main': 'Haze', 'description': 'haze', 'icon': '50d'}, {'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50d'}], 'base': 'stations', 'main': {'temp': 299.93, 'pressure': 1014, 'humidity': 82, 'temp_min': 292.15, 'temp_max': 307.04}, 'visibility': 9656, 'wind': {'speed': 4.6, 'deg': 260}, 'clouds': {'all': 75}, 'dt': 1565297590, 'sys': {'type': 1, 'id': 4667, 'message': 0.0173, 'country': 'US', 'sunrise': 1565269759, 'sunset': 1565318879}, 'timezone': -25200, 'id': 5368361, 'name': 'Los Angeles', 'cod': 200}.\n"
+     ]
+    }
+   ],
    "source": [
     "# Get weather data for LA\n",
-    "# weather_response = requests.get(query_url)\n",
-    "# weather_json = weather_response.json()\n",
+    "weather_response = requests.get(query_url)\n",
+    "weather_json = weather_response.json()\n",
     "\n",
     "# Get the temperature from the response\n",
-    "# print(f\"The weather API responded with: {weather_json}.\")"
+    "print(f\"The weather API responded with: {weather_json}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"base\": \"stations\",\n",
+      "    \"clouds\": {\n",
+      "        \"all\": 75\n",
+      "    },\n",
+      "    \"cod\": 200,\n",
+      "    \"coord\": {\n",
+      "        \"lat\": 34.05,\n",
+      "        \"lon\": -118.24\n",
+      "    },\n",
+      "    \"dt\": 1565297590,\n",
+      "    \"id\": 5368361,\n",
+      "    \"main\": {\n",
+      "        \"humidity\": 82,\n",
+      "        \"pressure\": 1014,\n",
+      "        \"temp\": 299.93,\n",
+      "        \"temp_max\": 307.04,\n",
+      "        \"temp_min\": 292.15\n",
+      "    },\n",
+      "    \"name\": \"Los Angeles\",\n",
+      "    \"sys\": {\n",
+      "        \"country\": \"US\",\n",
+      "        \"id\": 4667,\n",
+      "        \"message\": 0.0173,\n",
+      "        \"sunrise\": 1565269759,\n",
+      "        \"sunset\": 1565318879,\n",
+      "        \"type\": 1\n",
+      "    },\n",
+      "    \"timezone\": -25200,\n",
+      "    \"visibility\": 9656,\n",
+      "    \"weather\": [\n",
+      "        {\n",
+      "            \"description\": \"haze\",\n",
+      "            \"icon\": \"50d\",\n",
+      "            \"id\": 721,\n",
+      "            \"main\": \"Haze\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"description\": \"mist\",\n",
+      "            \"icon\": \"50d\",\n",
+      "            \"id\": 701,\n",
+      "            \"main\": \"Mist\"\n",
+      "        }\n",
+      "    ],\n",
+      "    \"wind\": {\n",
+      "        \"deg\": 260,\n",
+      "        \"speed\": 4.6\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the output of the JSON\n",
-    "# print(json.dumps(weather_json, indent=4, sort_keys=True))"
+    "print(json.dumps(weather_json, indent=4, sort_keys=True))"
    ]
   },
   {
