--- a/ETL-start.ipynb
+++ b/ETL-start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
     "import random\n",
     "import json\n",
     "import requests\n",
-    "#from config import api_key\n",
+    "from config import api_key\n",
     "\n",
     "\n",
     "# Create a reference the CSV file desired\n",
@@ -2015,78 +2015,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save config informationfor open weather API\n",
-    "# url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "# city1 = \"San Francisco\"\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
+    "city1 = \"San Francisco\"\n",
     "\n",
     "# Build query URL\n",
-    "# query_url = url + \"appid=\" + api_key + \"&q=\" + city1"
+    "query_url = url + \"appid=\" + api_key + \"&q=\" + city1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weather API responded with: {'coord': {'lon': -76.88, 'lat': 1.17}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04d'}], 'base': 'stations', 'main': {'temp': 284.009, 'pressure': 1015.8, 'humidity': 89, 'temp_min': 284.009, 'temp_max': 284.009, 'sea_level': 1015.8, 'grnd_level': 757.21}, 'wind': {'speed': 1.04, 'deg': 173.994}, 'clouds': {'all': 100}, 'dt': 1565297925, 'sys': {'message': 0.0069, 'country': 'CO', 'sunrise': 1565262504, 'sunset': 1565306282}, 'timezone': -18000, 'id': 3669881, 'name': 'San Francisco', 'cod': 200}.\n"
+     ]
+    }
+   ],
    "source": [
     "# Get weather data for SF from OPEN WEATHER API\n",
-    "# weather_response = requests.get(query_url)\n",
-    "# weather_json = weather_response.json()\n",
+    "weather_response = requests.get(query_url)\n",
+    "weather_json = weather_response.json()\n",
     "\n",
     "# Get the temperature from the response\n",
-    "# print(f\"The weather API responded with: {weather_json}.\")"
+    "print(f\"The weather API responded with: {weather_json}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"base\": \"stations\",\n",
+      "    \"clouds\": {\n",
+      "        \"all\": 100\n",
+      "    },\n",
+      "    \"cod\": 200,\n",
+      "    \"coord\": {\n",
+      "        \"lat\": 1.17,\n",
+      "        \"lon\": -76.88\n",
+      "    },\n",
+      "    \"dt\": 1565297925,\n",
+      "    \"id\": 3669881,\n",
+      "    \"main\": {\n",
+      "        \"grnd_level\": 757.21,\n",
+      "        \"humidity\": 89,\n",
+      "        \"pressure\": 1015.8,\n",
+      "        \"sea_level\": 1015.8,\n",
+      "        \"temp\": 284.009,\n",
+      "        \"temp_max\": 284.009,\n",
+      "        \"temp_min\": 284.009\n",
+      "    },\n",
+      "    \"name\": \"San Francisco\",\n",
+      "    \"sys\": {\n",
+      "        \"country\": \"CO\",\n",
+      "        \"message\": 0.0069,\n",
+      "        \"sunrise\": 1565262504,\n",
+      "        \"sunset\": 1565306282\n",
+      "    },\n",
+      "    \"timezone\": -18000,\n",
+      "    \"weather\": [\n",
+      "        {\n",
+      "            \"description\": \"overcast clouds\",\n",
+      "            \"icon\": \"04d\",\n",
+      "            \"id\": 804,\n",
+      "            \"main\": \"Clouds\"\n",
+      "        }\n",
+      "    ],\n",
+      "    \"wind\": {\n",
+      "        \"deg\": 173.994,\n",
+      "        \"speed\": 1.04\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the output of the JSON\n",
-    "# print(json.dumps(weather_json, indent=4, sort_keys=True))"
+    "print(json.dumps(weather_json, indent=4, sort_keys=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save config information for LA   from OPEN WEATHER API\n",
-    "# url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "# city2 = \"Los Angeles\"\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
+    "city2 = \"Los Angeles\"\n",
     "\n",
     "# Build query URL\n",
-    "# query_url = url + \"appid=\" + api_key + \"&q=\" + city2"
+    "query_url = url + \"appid=\" + api_key + \"&q=\" + city2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weather API responded with: {'coord': {'lon': -118.24, 'lat': 34.05}, 'weather': [{'id': 721, 'main': 'Haze', 'description': 'haze', 'icon': '50d'}, {'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50d'}], 'base': 'stations', 'main': {'temp': 299.93, 'pressure': 1014, 'humidity': 82, 'temp_min': 292.15, 'temp_max': 307.04}, 'visibility': 9656, 'wind': {'speed': 4.6, 'deg': 260}, 'clouds': {'all': 75}, 'dt': 1565297577, 'sys': {'type': 1, 'id': 4667, 'message': 0.0138, 'country': 'US', 'sunrise': 1565269759, 'sunset': 1565318879}, 'timezone': -25200, 'id': 5368361, 'name': 'Los Angeles', 'cod': 200}.\n"
+     ]
+    }
+   ],
    "source": [
     "# Get weather data for LA\n",
-    "# weather_response = requests.get(query_url)\n",
-    "# weather_json = weather_response.json()\n",
+    "weather_response = requests.get(query_url)\n",
+    "weather_json = weather_response.json()\n",
     "\n",
     "# Get the temperature from the response\n",
-    "# print(f\"The weather API responded with: {weather_json}.\")"
+    "print(f\"The weather API responded with: {weather_json}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"base\": \"stations\",\n",
+      "    \"clouds\": {\n",
+      "        \"all\": 75\n",
+      "    },\n",
+      "    \"cod\": 200,\n",
+      "    \"coord\": {\n",
+      "        \"lat\": 34.05,\n",
+      "        \"lon\": -118.24\n",
+      "    },\n",
+      "    \"dt\": 1565297577,\n",
+      "    \"id\": 5368361,\n",
+      "    \"main\": {\n",
+      "        \"humidity\": 82,\n",
+      "        \"pressure\": 1014,\n",
+      "        \"temp\": 299.93,\n",
+      "        \"temp_max\": 307.04,\n",
+      "        \"temp_min\": 292.15\n",
+      "    },\n",
+      "    \"name\": \"Los Angeles\",\n",
+      "    \"sys\": {\n",
+      "        \"country\": \"US\",\n",
+      "        \"id\": 4667,\n",
+      "        \"message\": 0.0138,\n",
+      "        \"sunrise\": 1565269759,\n",
+      "        \"sunset\": 1565318879,\n",
+      "        \"type\": 1\n",
+      "    },\n",
+      "    \"timezone\": -25200,\n",
+      "    \"visibility\": 9656,\n",
+      "    \"weather\": [\n",
+      "        {\n",
+      "            \"description\": \"haze\",\n",
+      "            \"icon\": \"50d\",\n",
+      "            \"id\": 721,\n",
+      "            \"main\": \"Haze\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"description\": \"mist\",\n",
+      "            \"icon\": \"50d\",\n",
+      "            \"id\": 701,\n",
+      "            \"main\": \"Mist\"\n",
+      "        }\n",
+      "    ],\n",
+      "    \"wind\": {\n",
+      "        \"deg\": 260,\n",
+      "        \"speed\": 4.6\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the output of the JSON\n",
-    "# print(json.dumps(weather_json, indent=4, sort_keys=True))"
+    "print(json.dumps(weather_json, indent=4, sort_keys=True))"
    ]
   },
   {
