--- a/final2.ipynb
+++ b/final2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4   33.542738 -117.785319   33.542738 -117.785319  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,15 +416,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AADT_data=(28093, 16)\n",
-      "UBER_LYFT_data=(6694, 23)\n"
+      "AADT_data shape =(28093, 16)\n",
+      "UBER_LYFT_data shape =(6694, 23)\n"
      ]
     }
    ],
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
        "CAL           15900   4945.850000            0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-195-4080d70a8f6f>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-195-4080d70a8f6f>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    uber_lyft_tod_am = uber_lyft_df.loc[uber_lyft_df[‘TOD’] == ‘AM’]\u001b[0m\n\u001b[1;37m                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "uber_lyft_tod_am = uber_lyft_df.loc[uber_lyft_df[‘TOD’] == ‘AM’]\n",
+    "uber_lyft_tod_am=uber_lyft_tod_am.sort_values(‘TNC_VOL’)\n",
+    "uber_lyft_tod_pm = uber_lyft_df.loc[uber_lyft_df[‘TOD’] == ‘PM’]\n",
+    "uber_lyft_tod_pm = uber_lyft_tod_pm.sort_values(‘TNC_VOL’)\n",
+    "plt.plot(uber_lyft_tod_am[‘ModifiedTMC’],uber_lyft_tod_am[‘TNC_VOL’],‘r-’)\n",
+    "plt.plot(uber_lyft_tod_pm[‘ModifiedTMC’],uber_lyft_tod_pm[‘TNC_VOL’],‘b.’)\n",
+    "# Plot Data\n",
+    "#traffic_sf_df.plot(kind=“line”, figsize=(10,5))\n",
+    "# Set a title for the chart\n",
+    "plt.title(“Uber-Lyft Pick-ups and Volume”)\n",
+    "plt.xlabel(“ID”)\n",
+    "plt.ylabel(“volume”)\n",
+    "#Add the legend.\n",
+    "legend = plt.legend(loc = “best”)\n",
+    "#legend.legendHandles[0]._sizes = [30]\n",
+    "#legend.legendHandles[1]._sizes = [30]\n",
+    "#legend.legendHandles[2]._sizes = [30]\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,14 +1160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The weather API responded with: {'coord': {'lon': -76.88, 'lat': 1.17}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04n'}], 'base': 'stations', 'main': {'temp': 282.626, 'pressure': 1019.09, 'humidity': 89, 'temp_min': 282.626, 'temp_max': 282.626, 'sea_level': 1019.09, 'grnd_level': 759}, 'wind': {'speed': 0.82, 'deg': 240.429}, 'clouds': {'all': 100}, 'dt': 1565316330, 'sys': {'message': 0.0074, 'country': 'CO', 'sunrise': 1565262504, 'sunset': 1565306282}, 'timezone': -18000, 'id': 3669881, 'name': 'San Francisco', 'cod': 200}.\n"
+      "The weather API responded with: {'coord': {'lon': -76.88, 'lat': 1.17}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04n'}], 'base': 'stations', 'main': {'temp': 282.626, 'pressure': 1019.09, 'humidity': 89, 'temp_min': 282.626, 'temp_max': 282.626, 'sea_level': 1019.09, 'grnd_level': 759}, 'wind': {'speed': 0.82, 'deg': 240.429}, 'clouds': {'all': 100}, 'dt': 1565319734, 'sys': {'message': 0.0069, 'country': 'CO', 'sunrise': 1565262504, 'sunset': 1565306282}, 'timezone': -18000, 'id': 3669881, 'name': 'San Francisco', 'cod': 200}.\n"
      ]
     }
    ],
@@ -1147,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1199,7 @@
       "        \"lat\": 1.17,\n",
       "        \"lon\": -76.88\n",
       "    },\n",
-      "    \"dt\": 1565316330,\n",
+      "    \"dt\": 1565319734,\n",
       "    \"id\": 3669881,\n",
       "    \"main\": {\n",
       "        \"grnd_level\": 759,\n",
@@ -1178,7 +1213,7 @@
       "    \"name\": \"San Francisco\",\n",
       "    \"sys\": {\n",
       "        \"country\": \"CO\",\n",
-      "        \"message\": 0.0074,\n",
+      "        \"message\": 0.0069,\n",
       "        \"sunrise\": 1565262504,\n",
       "        \"sunset\": 1565306282\n",
       "    },\n",
@@ -1206,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1504,7 @@
        "9         Arterial  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1671,7 @@
        "9  LINESTRING (-122.40202541968891 37.78624815175...  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1767,7 @@
        "13220000                                         Vermont St                Yes"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1873,7 @@
        "168000   03RD  Financial District South"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1878,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1889,10 +1924,11 @@
        " 'Street_Condition1',\n",
        " 'Rush_Hour_Routes1',\n",
        " 'uber_lyft_df',\n",
+       " 'aadt',\n",
        " 'AADT']"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,37 +1949,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SPC_transformed.to_sql(name='Street_Condition1', con=engine, if_exists='append', index=True)"
+    "SPC_transformed.to_sql(name='Street_Condition', con=engine, if_exists='append', index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RH_Routes_transformed.to_sql(name='Rush_Hour_Routes1', con=engine, if_exists='append', index=True)"
+    "RH_Routes_transformed.to_sql(name='Rush_Hour_Routes', con=engine, if_exists='append', index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "aadt_df.to_sql(name='AADT', con=engine, if_exists='append', index=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1958,6 +1987,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
